# linsim

./: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac
build-aux/: config.guess  config.sub  depcomp  install-sh  missing
data/: linsim.desktop  linsim.simulations.csv  linsim.simulations.xls  linsim.xpm
data/mac/: linsim.icns
data/win32/: fl_app.nsi
doc/: guide.html  guide.txt  table1.csv
m4/: build.m4  fltk.m4  np-compat.m4  pkg-config.m4
scripts/: build.mxe  builddist.sh  buildmxe.sh  config.mxe  mkappbundle.sh  mknsisinst.sh
scripts/srcdoc/: doxyfile.txt
src/: Makefile.am  csv.cxx  delay.cxx  fft.cxx  files  gauss_fir.cxx  linsim.rc  linsim_icon.cxx  linsim_ui.cxx  linsim_ui.fl  main.cxx  noise_gen.cxx  path.cxx  sim.cxx  sound.cxx
src/include/: cmplx.h  complex.h  configure.h  csv.h  delay.h  doxygen.h  fft.h  filter_tables.h  filters.h  gauss_fir.h  linsim_ui.h  linsimrc.h  main.h  noise_gen.h  path.h  sim.h  sim_vals.h  sound.h  threads.h  timeops.h  util.h  xmlrpc_client.h
src/support/: csv.cxx  delay.cxx  filter_tables.cxx  filters.cxx  gauss_fir.cxx  guide.cxx  noise_gen.cxx  path.cxx  sim.cxx  sound.cxx
src/utils/: configure.cxx  debug.cxx  icons.cxx  threads.cxx  timeops.cxx  util.cxx  xmlrpc_client.cxx
src/xmlrpcpp/: XmlRpc.h  XmlRpcBase64.h  XmlRpcClient.cpp  XmlRpcClient.h  XmlRpcDispatch.cpp  XmlRpcDispatch.h  XmlRpcException.h  XmlRpcMutex.cpp  XmlRpcMutex.h  XmlRpcServer.cpp  XmlRpcServer.h  XmlRpcServerConnection.cpp  XmlRpcServerConnection.h  XmlRpcServerMethod.cpp  XmlRpcServerMethod.h  XmlRpcSocket.cpp  XmlRpcSocket.h  XmlRpcSource.cpp  XmlRpcSource.h  XmlRpcUtil.cpp  XmlRpcUtil.h  XmlRpcValue.cpp  XmlRpcValue.h
